--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <style>
+        p {
+            background-color: green;
+            color: white;
+            font-size: 18px;
+        }
+    </style> -->
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -13,5 +21,14 @@
         <li><a href="./recipes/gorditas.html">Gorditas</a></li>
         <li><a href="./recipes/pico-de-gallo.html">Pico de Gallo</a></li>
     </ul>
+
+    <div class="class-div" >
+        Style me via the external method!
+    </div>
+
+    <p>I would like to be styled with the internal method, please.</p>
+
+    <button style="background-color: orange; font-size: 18px;">Inline Method</button>
+    
 </body>
 </html>
